--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -17,10 +17,10 @@ alex:
   name: Alex
   password_hash: <%= BCrypt::Password.create("test") %>
   type: Student
-  teacher_id: ben
+  teacher: ben
 
 russell:
   name: Russell
   password_hash: <%= BCrypt::Password.create("test") %>
   type: Parent
-  student_id: alex
+  student: alex
